--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Properties/Resources.resx
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExceptionDefaultPolicyNotExists" xml:space="preserve">
+    <value>The default exception policy is not set.</value>
+  </data>
   <data name="ExceptionDuplicateExceptionType" xml:space="preserve">
     <value>There are multiple exception policies for the exception type "{0}".</value>
   </data>
