--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Properties/Resources.resx
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Properties/Resources.resx
@@ -126,6 +126,12 @@
   <data name="ExceptionHandlingError" xml:space="preserve">
     <value>Exception is thrown during performing exception handling. For detailed information, please check the inner exception.</value>
   </data>
+  <data name="ExceptionInvalidReplaceExceptionType" xml:space="preserve">
+    <value>The excecption type "{0}" is not a valid replace exception type.</value>
+  </data>
+  <data name="ExceptionInvalidWrapExceptionType" xml:space="preserve">
+    <value>The excecption type "{0}" is not a valid wrap exception type.</value>
+  </data>
   <data name="ExceptionPolicyNotFound" xml:space="preserve">
     <value>Specified exception policy "{0}" does not exist.</value>
   </data>
