--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Properties/Resources.resx
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Properties/Resources.resx
@@ -117,13 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ExceptionDefaultPolicyNotExists" xml:space="preserve">
-    <value>The default exception policy is not set.</value>
-  </data>
-  <data name="ExceptionHandlingError" xml:space="preserve">
-    <value>Exception is thrown during performing exception handling. For detailed information, please check the inner exception.</value>
-  </data>
-  <data name="ExceptionPolicyNotFound" xml:space="preserve">
-    <value>Specified exception policy "{0}" does not exist.</value>
+  <data name="ExceptionHandlerConfigurationTypeNotSet" xml:space="preserve">
+    <value>The handler configuration type is not specified by applying the HandlerConfigurationAttribute to the class "{0}".</value>
   </data>
 </root>
