--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Properties/Resources.resx
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Properties/Resources.resx
@@ -117,13 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ExceptionDefaultPolicyNotExists" xml:space="preserve">
-    <value>The default exception policy is not set.</value>
+  <data name="ExceptionConfigurationPropertyNotExists" xml:space="preserve">
+    <value>The specified configuration property "{0}" does not exist.</value>
   </data>
-  <data name="ExceptionHandlingError" xml:space="preserve">
-    <value>Exception is thrown during performing exception handling. For detailed information, please check the inner exception.</value>
+  <data name="ExceptionDuplicateExceptionType" xml:space="preserve">
+    <value>There are multiple exception policies for the exception type "{0}".</value>
   </data>
-  <data name="ExceptionPolicyNotFound" xml:space="preserve">
-    <value>Specified exception policy "{0}" does not exist.</value>
+  <data name="ExceptionInvalidReplaceExceptionType" xml:space="preserve">
+    <value>The excecption type "{0}" is not a valid replace exception type.</value>
+  </data>
+  <data name="ExceptionInvalidWrapExceptionType" xml:space="preserve">
+    <value>The excecption type "{0}" is not a valid wrap exception type.</value>
   </data>
 </root>
