--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Properties/Resources.resx
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExceptionConfigurationPropertyNotExists" xml:space="preserve">
+    <value>The specified configuration property "{0}" does not exist.</value>
+  </data>
   <data name="ExceptionHandlerConfigurationTypeNotSet" xml:space="preserve">
     <value>The handler configuration type is not specified by applying the HandlerConfigurationAttribute to the class "{0}".</value>
   </data>
