--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Properties/Resources.resx
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Properties/Resources.resx
@@ -120,6 +120,9 @@
   <data name="ExceptionConfigurationPropertyNotExists" xml:space="preserve">
     <value>The specified configuration property "{0}" does not exist.</value>
   </data>
+  <data name="ExceptionFilterConfigurationTypeNotSet" xml:space="preserve">
+    <value>The filter configuration type is not specified by applying the FilterConfigurationAttribute to the class "{0}".</value>
+  </data>
   <data name="ExceptionHandlerConfigurationTypeNotSet" xml:space="preserve">
     <value>The handler configuration type is not specified by applying the HandlerConfigurationAttribute to the class "{0}".</value>
   </data>
